# aiengineeringfromscratchfollow

./: ai_engineer.md  books_to_read.md  linear_algebra.md  main.py  out.json  pyproject.toml
langchain/agents-under-the-hood/: 1_agent_tool_calling.py  2_agent_loop_raw.py  3_raw_react_prompt.py
langchain/ai-agents-section-3/: main.py  using_pydantic.py
langchain/document-assitant/: ingestion.py
langchain/document-assitant/backend/: core.py
langchain/rag/: ingestion.py  raw_response.md  retrieval.py
langchain/section-2/: main.py
langraph/ReACT_Agent_Loop/: main.py  nodes.py  react.py
langraph/agentic_rag/: main.py
langraph/reflection_agent/: chain.py  graph.py
mcp-server-from-scratch/: main.py  notes.py  server.py
phase-1-math-founds/: numpy_math_founds.py
phase-1-math-founds/autograd/: MLP.py  Value.py  backprop.py
phase-1-math-founds/lin-alg-intuition/: Matrix.py  numpy_math_founds.py  vector.py
phase-1-math-founds/matrix-transformations-eigenvals/: eigen.py  eigen_numpy.py  learn.md
phase-1-math-founds/prob-distri/: basics.py
phase-1-math-founds/vectors-matrices-operations/: Matrix.py  Vector.py  npnp.py
