[project]
name = "aiengineeringfromscratchfollow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.4",
    "langchain>=1.2.18",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "mcp[cli]>=1.27.0",
    "python-dotenv>=1.2.2",
]
