[project]
name = "aiengineeringfromscratchfollow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.3.1",
    "chromadb>=1.5.9",
    "fastmcp>=3.2.4",
    "grandalf>=0.8",
    "isort>=8.0.1",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchainhub>=0.1.21",
    "langgraph>=1.1.10",
    "langsmith>=0.8.3",
    "mcp[cli]>=1.27.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
]
